fixed z-index issue, still not sure how layering works

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ body {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 1rem;
   line-height: 1.5;
-  color: #333;
   overflow-x: hidden;
 }
 
@@ -46,6 +45,7 @@ p {
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  z-index: -99999;
 }
 
 .fullscreen-video-wrap video {
@@ -60,10 +60,40 @@ p {
   top: 0;
   left: 0;
   background-color: #000;
-  z-index: 1;
+  z-index: -9999;
   opacity: 0.35;
 }
 
 .video-content {
-  z-index: 2 !important;
+  z-index: 9999;
+  max-width: 100%;
+  max-height: 100%;
+  text-align: center;
+  line-height: 2;
+}
+
+.global-content {
+  z-index: 9999;
+  max-width: 100%;
+  max-height: 100%;
+  text-align: center;
+  line-height: 2;
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 30px;
+    color: #fff;
+  }
+
+  h5 {
+    font-size: 20px;
+    color: #fff;
+  }
+
+  p {
+    font-size: 1rem;
+    display: block;
+    color: #fff;
+  }
 }
